# MyPyPkg

./: README.md  setup.cfg
notebook/: demo.ipynb
src/pydongni/demo/: helloworld.py
src/pydongni/demo2/: helloworld2.py
