[metadata]
name = pydongni-pkg-dongni
version = 0.0.1
author = Dongni An
author_email = da2899@columbia.edu
description = personal package for dongni
long_description = file: README.md 
long_description_content_type = text/markdown
classifiers = 
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
package_dir = 
    = src
packages = find:
python_requires = >=3.7
install_requires =
    pandas>=1.3.3
    numpy>=1.12.1

[options.packages.find]
where = src